# brickgen

./: Cargo.toml  README.md  references  sphere.vox
src/: main.rs
src/bevy/: app.rs  camera.rs  cursor.rs  lights.rs  plugins.rs  registry.rs  update.rs
src/maze/: cell.rs  maze.rs
src/metadata/: assets.rs  headers.rs
src/utils/: brick.rs  draw.rs  math.rs  pixels.rs  polygon.rs  rectangle.rs  sfc32.rs  subdivide  voxels.rs  walk.rs  walk2d.rs
