[package]
name = "brickgen"
version = "0.1.0"
edition = "2024"

[dependencies]
brickadia = "0.1"
strum = "0.27"
strum_macros = "0.27"
num-traits = "0.2"
rayon = "1.8"
image = { version = "0.25", features = ["rayon"] }
imageproc = "0.25"

# Bevy & EGUI
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_window_utils = "0.15"
bevy_flycam = "0.15"

# Glam
glam = "0.29.3"

# Voxelis
voxelis = "25.4.0"

uuid = "1.12"